# sol-messenger

./: .eslintignore  .eslintrc  .gitignore  404.html  Anchor.toml  CNAME  Cargo.toml  Makefile  README.md  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
assets/: _...all_.03048a3a.js  _...all_.053e50fd.js  _...all_.059d93a4.js  _...all_.0fd3d00b.js  _...all_.11ced795.js  _...all_.20ec04eb.js  _...all_.2bf59d05.js  _...all_.2c83ad42.js  _...all_.319a51ec.css  _...all_.36ae9b68.js  _...all_.3c06ed01.js  _...all_.4912aa7e.js  _...all_.4a36d81c.js  _...all_.4b6d391a.js  _...all_.4cb9a979.js  _...all_.5351d6d8.js  _...all_.53b8a975.js  _...all_.5743b837.js  _...all_.63edd448.js  _...all_.6632743f.js  _...all_.6d60a58c.js  _...all_.6dc74c95.js  _...all_.73169310.css  _...all_.77a1b5d4.js  _...all_.789b0e71.js  _...all_.7957b805.js  _...all_.7c956e80.js  _...all_.7e54b7db.js  _...all_.83a1db46.js  _...all_.84654624.js  _...all_.861834af.js  _...all_.889a3d9c.js  _...all_.8c2995af.js  _...all_.8cbccbd6.js  (+281 more)
programs/messenger/: Cargo.toml
programs/messenger/src/: constants.rs  error.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/messenger/src/instructions/: add_device.rs  add_member.rs  add_meta.rs  add_to_channel.rs  authorize_member.rs  delete_channel.rs  delete_device.rs  delete_member.rs  delete_message.rs  delete_meta.rs  grant_access_member.rs  init_channel.rs  join_channel.rs  leave_channel.rs  mod.rs  post_message.rs  read_message.rs  update_message.rs
(+11 files in other folders)
