[package]
name = "messenger"
version = "0.0.6"
description = "On-chain messenger"
edition = "2021"
homepage = "https://jfactory.ch"
repository = "https://github.com/mfactory-lab/sol-messenger"

[lib]
crate-type = ["cdylib", "lib"]
name = "messenger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
