[package]
name = "messenger"
version = "0.0.15"
description = "On-chain messenger"
authors = ["Vladyslav Korniienko <vk.tiamo@gmail.com>"]
homepage = "https://jfactory.ch"
repository = "https://github.com/mfactory-lab/sol-messenger"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "messenger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
